--- a/.github/workflows/surgeDeploy.yml
+++ b/.github/workflows/surgeDeploy.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Installing Nodejs
-      run: actions/setup-nod@v2-beta
+      run: actions/setup-node@v2-beta
       with:
         node-version: 12
     - uses: borales/actions-yarn@v2.0.0
