--- a/.github/workflows/surgeDeploy.yml
+++ b/.github/workflows/surgeDeploy.yml
@@ -23,8 +23,8 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Installing Nodejs
-      run: actions/setup-node@v2-beta
+    - name: Install nodejs
+      uses: actions/setup-node@v2-beta
       with:
         node-version: 12
     - uses: borales/actions-yarn@v2.0.0
